--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Anton Kurdo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
     "uuid": "^8.3.1"
